--- a/src/components/home/posts/post.scss
+++ b/src/components/home/posts/post.scss
@@ -102,7 +102,7 @@
 }
 
 .container-titleanddesc {
-  padding: 0px 8px 8px 0;
+  padding: 0px 11px 8px 0;
   mask-image: linear-gradient(180deg, #000 60%, transparent);
 }
 
